# gr-proto

./: README.md
clFFT/src/: CMakeLists.txt
gnuradio-3.7.13.4/analysis/: out.tsv  parseBlocks.py
gr-accenabled/: CMakeLists.txt
gr-accenabled/cmake/Modules/: FindCUDA.cmake  FindMCL.cmake  FindOpenARC.cmake
gr-accenabled/examples/test_flowgraphs/: OpenCL_Test-Filter-TapBased.grc  OpenCL_TestSigSource.py  test_openclfilter.py
gr-accenabled/lib/: CMakeLists.txt  GRACCBase.cpp  GRACCBase.h  GRCLBase.h  acc_helper.c  acc_helper.h  batch_aspentest.bash  clComplexToArg.aspen  clComplexToArg_aspengen.bash  clComplexToArg_impl.cc  clComplexToArg_impl.h  clComplexToArg_kernel.c  clComplexToArg_kernel.h  clComplexToArg_o2gbuild.bash  clComplexToArg_template.aspen  clComplexToMag.aspen  clComplexToMagPhase.aspen  clComplexToMagPhase_aspengen.bash  clComplexToMagPhase_impl.cc  clComplexToMagPhase_impl.h  clComplexToMagPhase_kernel.c  clComplexToMagPhase_kernel.h  clComplexToMagPhase_o2gbuild.bash  clComplexToMagPhase_template.aspen  clComplexToMag_aspengen.bash  clComplexToMag_impl.cc  clComplexToMag_impl.h  clComplexToMag_kernel.c  clComplexToMag_kernel.h  clComplexToMag_o2gbuild.bash  clComplexToMag_template.aspen  clLog.aspen  clLog_aspengen.bash  clLog_aspentest.bash  clLog_impl.cc  clLog_impl.h  clLog_kernel.c  clLog_kernel.h  clLog_o2gbuild.bash  clLog_template.aspen  (+27 more)
gr-accenabled/setup_help/: CMakeCache.txt
gr-clenabled/: CMakeLists.txt
gr-clenabled/examples/test_flowgraphs/: OpenCL_Test-ComplexToMag.grc  OpenCL_Test-FFT.grc  OpenCL_Test-Filter.grc  test_openclfft.py
gr-clenabled/lib/: GRCLBase.cpp  clview.cc  test_clenabled.cc
gr-cosmic/: CMakeLists.txt  MANIFEST.md
gr-cosmic/apps/: CMakeLists.txt
gr-cosmic/cmake/Modules/: GrMiscUtils.cmake  GrPlatform.cmake  GrPython.cmake  GrSwig.cmake  GrTest.cmake  cosmicConfig.cmake
gr-cosmic/docs/: CMakeLists.txt  README.cosmic
gr-cosmic/docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
gr-cosmic/grc/: CMakeLists.txt  cosmic_cc_blocks_complex_to_mag_squared.xml
gr-cosmic/include/cosmic/: CMakeLists.txt  api.h  cc_blocks_complex_to_mag_squared.h
gr-cosmic/lib/: CMakeLists.txt  cc_blocks_complex_to_mag_squared_impl.cc  cc_blocks_complex_to_mag_squared_impl.h  qa_cc_blocks_complex_to_mag_squared.cc  qa_cc_blocks_complex_to_mag_squared.h  qa_cosmic.cc  qa_cosmic.h  test_cosmic.cc
gr-cosmic/python/: CMakeLists.txt  __init__.py  build_utils.py  build_utils_codes.py  qa_cc_blocks_complex_to_mag_squared.py
gr-cosmic/swig/: CMakeLists.txt  cosmic_swig.i
gr-ieee802-11/: CMakeLists.txt
gr-ieee802-11/lib/: viterbi_decoder.cc  viterbi_decoder.h
gr-openacc/: CMakeLists.txt  MANIFEST.md
gr-openacc/apps/: CMakeLists.txt
gr-openacc/cmake/Modules/: FindBrisbane.cmake  FindCUDA.cmake  FindMCL.cmake  FindOpenARC.cmake  FindOpenCL.cmake  GrMiscUtils.cmake  GrPlatform.cmake  GrPython.cmake  GrSwig.cmake  GrTest.cmake  openaccConfig.cmake
gr-openacc/docs/: CMakeLists.txt  README.openacc
gr-openacc/docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
gr-openacc/examples/example1/: example1.grc  kernel.ptx  kernel2.cu  openarc_kernel.cl  top_block.py
gr-openacc/examples/example2/: example2.grc  top_block.py
gr-openacc/examples/example3/: example3.grc  openarc_kernel.cu  top_block.py
gr-openacc/examples/example4/: example4.grc  kernel.cl  kernel.cu  top_block.py
gr-openacc/examples/example5/: example5.grc  top_block.py
gr-openacc/grc/: CMakeLists.txt  openacc_accComplexToArg.xml  openacc_accComplexToMag.xml  openacc_accComplexToMagPhase.xml  openacc_accComplexToMagSquared.xml  openacc_accLog.xml  openacc_accMagPhaseToComplex.xml
gr-openacc/include/openacc/: CMakeLists.txt  accComplexToArg.h  accComplexToMag.h  accComplexToMagPhase.h  accComplexToMagSquared.h  accLog.h  accMagPhaseToComplex.h  api.h
gr-openacc/lib/: CMakeLists.txt  GRACCBase.cpp  GRACCBase.h  accComplexToArg_impl.cc  accComplexToArg_impl.h  accComplexToArg_kernel.c  accComplexToArg_kernel.h  accComplexToArg_o2gbuild.bash  accComplexToMagPhase_impl.cc  accComplexToMagPhase_impl.h  accComplexToMagPhase_kernel.c  accComplexToMagPhase_kernel.h  accComplexToMagPhase_o2gbuild.bash  accComplexToMagSquared_impl.cc  accComplexToMagSquared_impl.h  accComplexToMagSquared_kernel.c  accComplexToMagSquared_kernel.h  accComplexToMagSquared_o2gbuild.bash  accComplexToMag_impl.cc  accComplexToMag_impl.h  accComplexToMag_kernel.c  accComplexToMag_kernel.h  accComplexToMag_o2gbuild.bash  accLog_impl.cc  accLog_impl.h  accLog_kernel.c  accLog_kernel.h  accLog_o2gbuild.bash  accMagPhaseToComplex_impl.cc  accMagPhaseToComplex_impl.h  accMagPhaseToComplex_kernel.c  accMagPhaseToComplex_kernel.h  accMagPhaseToComplex_o2gbuild.bash  accMathOpTypes.h  accSComplex.h  acc_helper.c  acc_helper.h  acc_helper_o2gbuild.bash  fast_atan2f.cc  fast_atan2f.h  (+28 more)
gr-openacc/python/: CMakeLists.txt  __init__.py  build_utils.py  build_utils_codes.py  qa_accComplexToArg.py  qa_accComplexToMag.py  qa_accComplexToMagPhase.py  qa_accComplexToMagSquared.py  qa_accLog.py  qa_accMagPhaseToComplex.py
gr-openacc/swig/: CMakeLists.txt  openacc_swig.i
gr-ornl/: CMakeLists.txt  MANIFEST.md  build.sh
gr-ornl/apps/: CMakeLists.txt
gr-ornl/cmake/Modules/: GrMiscUtils.cmake  GrPlatform.cmake  GrPython.cmake  GrSwig.cmake  GrTest.cmake  ornlConfig.cmake
gr-ornl/docs/: CMakeLists.txt  README.ornl
gr-ornl/grc/: CMakeLists.txt  ornl_saxpy.xml  ornl_vecadd.xml
gr-ornl/lib/: CMakeLists.txt  qa_ornl.cc  qa_ornl.h  qa_saxpy.cc  qa_saxpy.h  qa_vecadd.cc  qa_vecadd.h  saxpy_impl.cc  saxpy_impl.cc.map  saxpy_impl.cc.nomap  saxpy_impl.h  test_ornl.cc  vecadd_impl.cc  vecadd_impl.cc.map  vecadd_impl.cc.nomap  vecadd_impl.h
gr-ornl/python/: CMakeLists.txt  __init__.py  build_utils.py  build_utils_codes.py  qa_saxpy.py  qa_vecadd.py
gr-ornl/swig/: CMakeLists.txt  ornl_swig.i
gr-sycl/: CMakeLists.txt
gr-sycl/analysis/: ._out.tsv  README  extractXMLFiles
gr-sycl/gr-blocks/: CMakeLists.txt
simde/test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
(+40 files in other folders)
